add transtions and health view + refactor project